--- a/compilers/BUILD.bazel
+++ b/compilers/BUILD.bazel
@@ -57,7 +57,7 @@ bootstrap_executable(
     opts = ["-compat-32"],
     deps = [
         "//compilerlibs:ocamlcommon",
-        "//compilerlibs:ocamlbytecomp"
+        "//bytecomp:ocamlbytecomp"
     ]
 )
 
