--- a/driver/BUILD.bazel
+++ b/driver/BUILD.bazel
@@ -280,7 +280,7 @@ bootstrap_module(
     visibility = [
         "//bytecomp:__pkg__",
         "//tools:__pkg__",
-        "//toplevel/byte:__pkg__",
+        "//toplevel:__pkg__",
     ]
 )
 
