--- a/fixpoint/BUILD.bazel
+++ b/fixpoint/BUILD.bazel
@@ -28,7 +28,7 @@ ocamlc_fixpoint(
     opts = ["-compat-32"],
     deps = [
         "//compilerlibs:ocamlcommon",
-        "//compilerlibs:ocamlbytecomp"
+        "//bytecomp:ocamlbytecomp"
     ],
     visibility = ["//visibility:public"]
 )
